# EnvHaz-Graphics

./: .gitignore  :q  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: BitFlags.hpp.CB7624C3309A40F3.idx  BufferManager.cpp.B410B388CA6207A8.idx  BufferManager.hpp.08601090DA991123.idx  DataStructs.hpp.4FE6B1F7087B7226.idx  EnvHazGraphics.cpp.50EAC83B5556970B.idx  EnvHazGraphics.hpp.1A03618DC547F3CD.idx  HashedStrings.hpp.81FFB5D10CFAD3F1.idx  Renderer.cpp.545113401F98641E.idx  Renderer.hpp.C2D5A4A57C3D8E52.idx  SDL_HELPERS.hpp.B8346205121AE698.idx  ShaderManager.cpp.8257059282DE21FE.idx  ShaderManager.hpp.6FF9740E2DC50CF7.idx  Window.cpp.61AEDC98F12A1909.idx  Window.hpp.A5005083FD65D290.idx  _fixes.hpp.B2BE484967AA3FE9.idx  _vectorize.hpp.C3B7962D7A4D41C7.idx  common.hpp.5B8B705A7E038272.idx  compute_common.hpp.E6AD51E441E840AB.idx  compute_vector_relational.hpp.0AA88E2B3D4F79F7.idx  exponential.hpp.8F511F26DEEB5240.idx  func_common.inl.2C1F7C1A8D9DDB53.idx  func_exponential.inl.18FB6A1DD2215FBE.idx  func_geometric.inl.870655B49C1BD505.idx  func_integer.inl.9527B3C05EEB9FC5.idx  func_matrix.inl.57B1A86B10CB4BF8.idx  func_packing.inl.239333B9B7906211.idx  func_trigonometric.inl.6F7B9A2C67BC5499.idx  func_vector_relational.inl.721FCB8B7277CE5A.idx  fwd.hpp.F463F9F252ED9998.idx  geometric.hpp.4D9222F6F720C73C.idx  glad.c.20B53B6AA4D81D6F.idx  glad.c.CD35CDF12F3A2E58.idx  glad.h.469115BEFEFF3045.idx  glad.h.89714B13B60A9345.idx  glm.hpp.6CB79C0D30653E3F.idx  integer.hpp.8AE218597BB054D6.idx  khrplatform.h.75C938B0D317D2ED.idx  khrplatform.h.CF0105DA10E1FCB7.idx  lib.cpp.2D5CD09D83E4720A.idx  lib_export.hpp.5009C294A866501F.idx  (+118 more)
app/: CMakeLists.txt
app/assets/: ScreenRender.frag  ScreenRender.vert  TEST.ahzm  animation.vert  shader.frag  shader.vert
app/assets/animated/: rigged_sonic.glb
app/include/: camera.hpp
app/src/: main.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
lib/: CMakeLists.txt
lib/EnvHazGraphics/include/: BitFlags.hpp  BufferManager.hpp  DataStructs.hpp  DynamicBuffer.hpp  EnvHazGraphics.hpp  MaterialManager.hpp  Mesh.hpp  MeshManager.hpp  Model.hpp  ModelPackage.hpp  RenderQueue.hpp  Renderer.hpp  ShaderManager.hpp  StaticBuffer.hpp  StaticStack.hpp  Window.hpp  lib_export.hpp  platform.hpp
lib/EnvHazGraphics/include/Animation/: AnimatedModel.hpp  AnimatedModelManager.hpp  Animation.hpp  Animator.hpp  KeyFrame.hpp
lib/EnvHazGraphics/include/FrameBuffers/: FrameBuffer.hpp  RenderTexture.hpp
lib/EnvHazGraphics/include/Utils/: Alghorithms.hpp  Boost_GLM_Serialization.hpp  HashedStrings.hpp  Math_Utils.hpp  SDL_HELPERS.hpp
lib/EnvHazGraphics/include/Utils/Drawing/: Lines.hpp
lib/EnvHazGraphics/src/: Animator.cpp  BinaryModelLoader.cpp  BufferManager.cpp  DynamicBuffer.cpp  EnvHazGraphics.cpp  MaterialManager.cpp  MeshManager.cpp  RenderQueue.cpp  Renderer.cpp  ShaderManager.cpp  StaticBuffer.cpp  StaticStack.cpp  Window.cpp  lib.cpp  stbi_impl.cpp
lib/EnvHazGraphics/src/Animation/: AnimatedModelManager.cpp  AnimatedModelManager_Animation.cpp  Animation.cpp  BlendSpace2D.cpp
lib/EnvHazGraphics/src/Utils/: Algorithms.cpp
lib/EnvHazGraphics/src/tinygltf/: tiny_gltf.cpp
